# internal/adapter/handler/http/router.go
@@ -58,6 +58,7 @@ func NewRouter(a *fiber.App, ingredientHandler IngredientHandler, recipeHandler 
 		{
 			setting.Delete("/deleteAccount", settingsHandler.DeleteAccount)
 			setting.Get("/getLanguage", settingsHandler.GetLanguage)
+			setting.Put("/changeLanguage", settingsHandler.ChangeLanguage)
 		}
 
 	}
